Fixed invalid include paths.
Fixed PHP Warning: Missing argument 6 for traderoute_distance(), called in includes/traderoute_engage.php on line 258
Fixed PHP Notice: Undefined index: l_md_toll in main.php on line 676
Fixed PHP Parse error: syntax error, unexpected ';' in planet_report_ce.php on line 381
Fixed PHP Notice: Undefined index: ship in sched_tow.php on line 43

TheMightyDude (06 September 2012)
--------------------------------------
Fixed and resolved issue with conflicting languages when the player changes the language in options.

TheMightyDude (05 September 2012)
--------------------------------------
Fixed option2.php and re-ordered the code so that it works how it was intended.
It now does the hashing of the new password when it has all valid data and after it has loaded the player info.
It now updates the language when the new language is different from the players language.
The password session is also set once a valid password change, this was to stop the you need to login after changing your password.

TheMightyDude (03 September 2012)
--------------------------------------
Fixed PHP Notice: Undefined variable: do_die in includes/connect_database.php
Updated fader.php to display "Network News Down" (l_news_down) when unable to access the database and more checks.
Added l_news_down to each of the language files, translated using Google Translate (needs checking).
Updated fader.php to only display as link when we have news.
Added a switch to display the users password upon signup.
Moved l_new_pwis to its correct category.
Fixed PHP Warning: include(../header.php): failed to open stream: No such file or directory in includes/check_login.php
Fixed PHP Warning: include(../footer.php): failed to open stream: No such file or directory in includes/check_login.php

TheKabal (2 September 2012)
--------------------------------------
Adminlog() is now admin_log
Playerlog() is now player_log
Switched index and report to template driven versions.