@@ -20,6 +20,8 @@ Fixed PHP Warning: Missing argument 6 for traderoute_distance(), called in inclu
 Fixed PHP Notice: Undefined index: l_md_toll in main.php on line 676
 Fixed PHP Parse error: syntax error, unexpected ';' in planet_report_ce.php on line 381
 Fixed PHP Notice: Undefined index: ship in sched_tow.php on line 43
+Fixed PHP Notice: Use of undefined constant res - assumed 'res' in bounty.php on line 131
+Fixed response for GET as well as POST so that players can remove their set bounties.
 
 TheMightyDude (06 September 2012)
 --------------------------------------
